tests/ui/proc-macro/signature-proc-macro-attribute.stderr
error: mismatched attribute proc macro signature
  --> $DIR/signature-proc-macro-attribute.rs:7:1
   |
LL | pub fn bad_input(input: String) -> TokenStream {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ attribute proc macro must have two arguments of type `proc_macro::TokenStream`

error: mismatched attribute proc macro signature
  --> $DIR/signature-proc-macro-attribute.rs:13:42
   |
LL | pub fn bad_output(input: TokenStream) -> String {
   |                                          ^^^^^^ found std::string::String, expected type `proc_macro::TokenStream`
   |
   = note: attribute proc macros must have a signature of `fn(TokenStream, TokenStream) -> TokenStream`

error: mismatched attribute proc macro signature
  --> $DIR/signature-proc-macro-attribute.rs:13:1
   |
LL | pub fn bad_output(input: TokenStream) -> String {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ attribute proc macro must have two arguments of type `proc_macro::TokenStream`

error: mismatched attribute proc macro signature
  --> $DIR/signature-proc-macro-attribute.rs:20:41
   |
LL | pub fn bad_everything(input: String) -> String {
   |                                         ^^^^^^ found std::string::String, expected type `proc_macro::TokenStream`
   |
   = note: attribute proc macros must have a signature of `fn(TokenStream, TokenStream) -> TokenStream`

error: mismatched attribute proc macro signature
  --> $DIR/signature-proc-macro-attribute.rs:20:1
   |
LL | pub fn bad_everything(input: String) -> String {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ attribute proc macro must have two arguments of type `proc_macro::TokenStream`

error: mismatched attribute proc macro signature
  --> $DIR/signature-proc-macro-attribute.rs:27:49
   |
LL | pub fn too_many(a: TokenStream, b: TokenStream, c: String) -> TokenStream {
   |                                                 ^^^^^^^^^ found unexpected argument

error: aborting due to 6 previous errors

